[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "flet[all]>=0.28.3",
    "sqlalchemy>=2.0.43",
    "beautifulsoup4>=4.12",
    "duckduckgo-search>=5.1",
    "google-generativeai>=0.5",
]
